--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: calc(10px + 2vmin);
+  font-size: 16px;
+}
+
+:root {
+
+  --bg-color-footer : #141414;
+  --color-footer : white;
+  
 }
