[wip] ready to add features

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,6 @@
-.main-content {
+.App {
     background-color: var(--bg-color-main-content);
-    color: var(--color-main-content);
+    .main-content {
+        color: var(--color-main-content);
+    }
 }
