--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,6 @@
 .Footer {
 
-    height: 3em;
     background-color: var(--bg-color-footer);
     color: var(--color-footer);
-
+    font-size: 14px;
 }
