[style] fix border logo glow

--- a/src/components/CustomIcons/ElrondLogo/style.scss
+++ b/src/components/CustomIcons/ElrondLogo/style.scss
@@ -1,7 +1,7 @@
 .main-logo {
-    height: 1.5rem;
+    height: 1.5em;
     width: auto;
-    margin-right: 0.8rem;
+    margin-right: 1em;
 
     .logo {
         fill: var(--font-color-header);
