--- a/src/components/ServiceProviderCard/ServiceProviderCard.scss
+++ b/src/components/ServiceProviderCard/ServiceProviderCard.scss
@@ -9,28 +9,43 @@
 .custom-card {
     background-color: var(--bg-color--header);
     width: min(100%, 500px);	
-    box-shadow: 0px 0px 5px 0px rgba(36,37,38, 1);
+    box-shadow: 0px 0px 30px 0px rgba(36,37,38, 1);
 
 }
 
 .card-header {
-    border-bottom: 0;
+    border-bottom: 1px solid #4e5052 !important;
     background-color: inherit;
 
     img {
-        width: 5em;
+        width: 4em;
         height: auto;
         border-radius: 100%;
         border: 1px solid #4e5052;
         padding: .2em;
     }
 
-    .card-title, h5 {
+    .card-title {
         margin-bottom: 0;
+        font-size: 20px;
     }
 }
 
 .card-footer {
     border-top: 0;
     background-color: inherit;
+
+    a {
+        border-radius: 100%;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: var(--primary-color);
+    border-radius: 4px;
+
+    // :focus, :hover {
+    //     color: white;
+    // }
 }
