Add egld price and qrcode for supporting

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,8 +27,10 @@ body
   --color-footer : white;
   --bg-color-footer : #18191a;
 
-  --primary-color: #1f43f6;
+  --primary-color: #1A45C2;
   --success-color: #12a366;
+
+  --toastify-color-success: var(--primary-color);
 
   [theme='light']
   {
